tree-sitter-ox/grammar.js
/**
 * @file Parse training logs.
 * @author konnerhorton <konnerhorton@gmail.com>
 * @license MIT
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "ox",

  extras: ($) => [/[ \t]/], // Only spaces and tabs, NOT newlines

  rules: {
    source_file: ($) => repeat(choice($._entry, $.include_directive, $.plugin_directive, $.comment, "\n")),

    _entry: ($) => choice(
      $.singleline_entry,
      $.session_block,
      $.movement_block,
      $.template_block,
      $.note_entry,
      $.query_entry,
      $.weigh_in_entry,
    ),

    include_directive: ($) => prec.right(seq(
      "@include",
      field("path", $.file_path),
      optional("\n")
    )),

    plugin_directive: ($) => prec.right(seq(
      "@plugin",
      field("path", $.file_path),
      optional("\n")
    )),

    file_path: ($) => seq('"', /[^"\n]+/, '"'),

    comment: ($) => /#[^\n]*/,

    // Single-line entry: date flag item: details
    singleline_entry: ($) =>
      prec.right(seq(
        field("date", $.date),
        "T",
        field("item", $.item),
        ":",
        optional(field("details", $.details)),
        optional("\n")
      )),

    // Standalone note entry: date note "text"
    note_entry: ($) =>
      prec.right(seq(
        field("date", $.date),
        "note",
        field("text", $.quoted_string),
        optional("\n")
      )),

    // Weigh-in entry: date W weight optional(T06:30) optional("scale name")
    weigh_in_entry: ($) =>
      prec.right(seq(
        field("date", $.date),
        "W",
        field("weight", $.weight),
        optional(field("time_of_day", $.time_of_day)),
        optional(field("scale", $.quoted_string)),
        optional("\n")
      )),

    // Query entry: date query "name" "SQL"
    query_entry: ($) =>
      prec.right(seq(
        field("date", $.date),
        "query",
        field("name", $.quoted_string),
        field("sql", $.quoted_string),
        optional("\n")
      )),

    // @session block
    session_block: ($) =>
      prec.right(seq(
        "@session",
        "\n",
        $.date_line,
        repeat(choice(
          $.item_line,
          $.note_line,
          $.srpe_line,
          $.name_line,
          $.completed_line,
          $.format_line
        )),
        "@end",
        optional("\n")
      )),

    // Header lines. `date:` must come first; the rest are free to follow in
    // any order alongside the movement and note lines.
    date_line: ($) => seq("date:", field("date", $.date), "\n"),

    name_line: ($) => seq("name:", field("name", $.name), "\n"),

    completed_line: ($) => seq("completed:", field("value", $.boolean), "\n"),

    // Free-text stub for future @template linkage, unvalidated for now.
    format_line: ($) => seq("format:", field("value", $.text_until_newline), "\n"),

    // @movement block
    movement_block: ($) =>
      prec.right(seq(
        "@movement",
        field("name", $.identifier),
        "\n",
        repeat($.metadata_line),
        "@end",
        optional("\n")
      )),

    // @template block
    template_block: ($) =>
      prec.right(seq(
        "@template",
        field("name", $.name),
        "\n",
        repeat(choice($.item_line, $.note_line)),
        "@end",
        optional("\n")
      )),

    // Item line within a block: item: details
    item_line: ($) =>
      seq(
        field("item", $.item),
        ":",
        field("details", $.details),
        "\n"
      ),

    // Note line within a session/template block: note: "text"
    note_line: ($) =>
      seq(
        "note:",
        field("text", $.quoted_string),
        "\n"
      ),

    // Session RPE line within a session block: srpe: <rating> <duration> ["note"]
    // The keyword is fused to its rating so the token only fires on this form.
    // A bare "srpe:" literal would outrun the generic `item` token and capture
    // the transitional `srpe: "5; PT45M"` movement hack, which must keep
    // lexing as an item_line until slice C retires it.
    srpe_line: ($) =>
      seq(
        field("rating", $.srpe_rating),
        field("duration", $.duration),
        optional(field("note", $.quoted_string)),
        "\n"
      ),

    // Keyword and rating in one token: "srpe: 5". The parser strips the prefix.
    srpe_rating: ($) => token(seq("srpe:", /[ \t]*/, /\d+/)),

    // Metadata line within definition blocks: key: value
    metadata_line: ($) =>
      seq(
        field("key", $.identifier),
        ":",
        optional(field("value", $.text_until_newline)),
        "\n"
      ),

    date: ($) => /\d{4}-\d{2}-\d{2}/,

    boolean: ($) => choice("true", "false"),

    // Item name (before colon)
    item: ($) => /[^\s:]+/,

    // Identifier (exercise names, metadata keys)
    identifier: ($) => /[^\s:]+/,

    // Name (session/template names, extends to newline, no quotes)
    name: ($) => /[^\n]+/,

    // Text until newline (for metadata values, standalone notes)
    text_until_newline: ($) => /[^\n]+/,

    // Details: combination of weights, reps, duration, distance, quoted notes
    details: ($) =>
      repeat1(
        choice(
          field("weight", $.weight),
          field("rep_scheme", $.rep_scheme),
          field("duration", $.duration),
          field("distance", $.distance),
          field("note", $.quoted_string)
        )
      ),

    // Mass units: curated from pint's default_en.txt
    // Breaking change: lbs → lb (pint's official symbol)
    // BW remains a special bodyweight token
    weight: ($) => token(choice(
      /\d+(\.\d+)?(g|gram|kg|kilogram|lb|pound|oz|ounce|stone|t|tonne|grain|gr|ct|carat)((\+\d+(\.\d+)?(g|gram|kg|kilogram|lb|pound|oz|ounce|stone|t|tonne|grain|gr|ct|carat))+)?/,  // single or combined: 24kg or 24kg+32kg
      /((BW|\d+(\.\d+)?(g|gram|kg|kilogram|lb|pound|oz|ounce|stone|t|tonne|grain|gr|ct|carat)?)\/)+(BW|\d+(\.\d+)?(g|gram|kg|kilogram|lb|pound|oz|ounce|stone|t|tonne|grain|gr|ct|carat))/,  // progressive (incl. implied units + mixed BW): 24kg/32kg, 160/185/210lb, BW/25lb, 60/70kg/160/180lb
      /\d+(\.\d+)?(g|gram|kg|kilogram|lb|pound|oz|ounce|stone|t|tonne|grain|gr|ct|carat)/,  // single: 24kg
      /BW/                                // bodyweight standalone
    )),

    rep_scheme: ($) => /(\d+x\d+)|(\d+(\/\d+)+)/,  // 4x4 or 5/5/5


    // ISO 8601 duration: PT followed by at least one component.
    // Single: PT30M, PT30M15S, PT1H, PT1H30M, PT1H30M15S, PT30M15.5S
    // Progressive (per-set durations): PT30S/PT25S/PT20S
    duration: ($) => /PT(\d+H(\d+M(\d+(\.\d+)?S)?)?|\d+M(\d+(\.\d+)?S)?|\d+(\.\d+)?S)(\/PT(\d+H(\d+M(\d+(\.\d+)?S)?)?|\d+M(\d+(\.\d+)?S)?|\d+(\.\d+)?S))*/,

    // 24-hour time of day with T prefix: T06:30
    time_of_day: ($) => /T\d{2}:\d{2}/,

    // Distance units: curated from pint's default_en.txt
    // Mass and distance unit sets are disjoint, so the progressive form below
    // cannot be captured by weight's progressive branch (which requires a mass
    // unit on its final element).
    distance: ($) => token(choice(
      /((\d+(\.\d+)?(m|meter|metre|km|kilometer|cm|centimeter|mm|millimeter|in|inch|ft|foot|yd|yard|mi|mile|nmi)?)\/)+(\d+(\.\d+)?(m|meter|metre|km|kilometer|cm|centimeter|mm|millimeter|in|inch|ft|foot|yd|yard|mi|mile|nmi))/,  // progressive (incl. implied units): 100m/200m/400m, 100/200/400m
      /\d+(\.\d+)?(m|meter|metre|km|kilometer|cm|centimeter|mm|millimeter|in|inch|ft|foot|yd|yard|mi|mile|nmi)/  // single: 5km
    )),

    quoted_string: ($) => /"[^"]*"/,
  },
});
