tree-sitter-ox/test/corpus/movement_block.txt
==================
Movement Block
==================

@movement kb-oh-press
equipment: kettlebell
tag: press
url: https://example.com/kb-press
note: keep elbow tight
@end

---

(source_file
  (movement_block
    name: (identifier)
    (metadata_line
      key: (identifier)
      value: (text_until_newline))
    (metadata_line
      key: (identifier)
      value: (text_until_newline))
    (metadata_line
      key: (identifier)
      value: (text_until_newline))
    (metadata_line
      key: (identifier)
      value: (text_until_newline))))
