tree-sitter-ox/test/corpus/singleline_entry_weighin.txt
========================
Singleline Entry Weighin
========================

2025-11-13 W superfly-1: 155lb "noon"

---

(source_file
  (singleline_entry
    date: (date)
    flag: (flag)
    item: (item)
    details: (details
      weight: (weight)
      note: (quoted_string))))
